--- a/style.css
+++ b/style.css
@@ -11,8 +11,13 @@ html, body, input, textarea {
     font-size: 18px;
 }
 
-html, body {
-    height: 100%;
+html {
+	height: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+body {
     padding: 0;
     margin: 0;
 }
