--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {
     background-position: center center; 
 }
 
-html, body, input, textarea {
+html, body, input, textarea, a, a:visited, a:hover {
+	color: black;
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-size: 18px;
 }
@@ -60,10 +61,10 @@ div#pageFooter, div#pageFooter a, div#pageFooter a:visited, div#pageFooter a:hov
 		
 }
 
-div#pageFooter a, div#pageFooter a:visited {
+a, a:visited {
 	text-decoration: none;
 } 
 
-div#pageFooter a:hover {
+a:hover {
 	text-decoration: underline;
 }
